ajustando icon e title

--- a/src/app/tabs/tabs.page.scss
+++ b/src/app/tabs/tabs.page.scss
@@ -62,7 +62,8 @@ ion-menu-button{
 
 .search{
   font-size: 1.1rem;
-  margin-right: 10px;
+  margin-right: 20px;
+  margin-top: 10px;
   color: #f7f1f1;
 }
 
@@ -78,4 +79,7 @@ ion-title{
   font-size: 1.3rem;
   font-weight: 300;
   text-align: center;
+}
+
+ion-title img{
 }
