--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -5,21 +5,11 @@
       <img src="assets/icon/bar.png"/>
     </ion-buttons>
       <ion-title>
-        Site Miséria
+        <img src="assets/icone.png"/> Site Miséria
       </ion-title>
     <ion-buttons slot="end" class="search">
       <ion-icon name="search-outline"></ion-icon>
     </ion-buttons>
-
-    <ion-row>
-      <ion-col size="2">
-      </ion-col>
-      <ion-col size="8">
-        <img src="assets/icone.png"/>
-      </ion-col>
-      <ion-col size="2">
-      </ion-col>
-    </ion-row>
 
   </ion-toolbar>
 </ion-header>
