--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="primary">
-    <ion-buttons slot="start" class="bar">
+    <ion-buttons slot="start" class="bar" (click)="openFirst()">
       <!--<ion-menu-button></ion-menu-button>-->
       <img src="assets/icon/bar.png"/>
     </ion-buttons>
@@ -10,7 +10,6 @@
     <ion-buttons slot="end" class="search">
       <ion-icon name="search-outline"></ion-icon>
     </ion-buttons>
-
   </ion-toolbar>
 </ion-header>
 
