--- a/src/app/single/single.page.html
+++ b/src/app/single/single.page.html
@@ -3,21 +3,21 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
-    <ion-title>Em Política</ion-title>
+    <ion-title>Em Cariri</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-card class="mt-0">
     <div class="bg-ion-img">
-      <img src="https://bordalo.observador.pt/400x,q85/https://s3.observador.pt/wp-content/uploads/2020/04/09154157/GettyImages-1208232247-scaled_770x433_acf_cropped-1.jpg" alt=""/>
+      <img src="assets/posts/itau.jpg" alt=""/>
       <div class="capa"></div>
     </div>
     <ion-card-header>
-      <ion-card-title>"Mentira de Estado". Como França ficou sem máscara</ion-card-title>
+      <ion-card-title>Prefeitura multa banco itaú em R$50 mil por descumprir decreto</ion-card-title>
     </ion-card-header>
     <ion-card-subtitle>
-      Depois de reunir à distância com os 5 maiores bancos, marcelo diz que setor já iniciou os processos para colocar o terreno
+      A medida já havia sido prevista no decreto publicado no dia 6, quando o prefeito Zé Ailton Brasil (PT) editou valores a serem pagos por quem descumprir as determinações.
     </ion-card-subtitle>
     <div class="card-content-single">
       <p>
