--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,7 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="primary">
     <ion-buttons slot="start" class="bar" (click)="openFirst()">
-      <!--<ion-menu-button></ion-menu-button>-->
       <img src="assets/icon/bar.png"/>
     </ion-buttons>
       <ion-title>
@@ -21,11 +20,11 @@
       </ion-tab-button>
 
       <ion-tab-button tab="tab2">
-        <ion-label>Últimas</ion-label>
+        <ion-label>Colunas</ion-label>
       </ion-tab-button>
 
       <ion-tab-button tab="tab3">
-        <ion-label>Populares</ion-label>
+        <ion-label>TV Miséria</ion-label>
       </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
