--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -3,20 +3,144 @@
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
   <ion-card class="mt-0" [routerLink]="['/single']">
-    <!--<div class="bg-ion-img">
-      <img src="https://bordalo.observador.pt/400x,q85/https://s3.observador.pt/wp-content/uploads/2020/04/09154157/GettyImages-1208232247-scaled_770x433_acf_cropped-1.jpg" alt=""/>
-      <div class="capa"></div>
-    </div>-->
     <ion-card-header>
-      <ion-badge color="warning">SAÚDE</ion-badge>
-      <ion-card-title><strong>Em Política /</strong> "Mentira de Estado". Como França ficou sem máscara</ion-card-title>
+      <ion-badge color="warning">AGLOMERAÇÃO</ion-badge>
+      <ion-card-title><strong>Em Cariri /</strong> Prefeitura multa banco itaú em R$50 mil por descumprir decreto</ion-card-title>
     </ion-card-header>
     <ion-card-subtitle>
-      Depois de reunir à distância com os 5 maiores bancos, marcelo diz que setor já iniciou os processos para colocar o terreno
+      A medida já havia sido prevista no decreto publicado no dia 6, quando o prefeito Zé Ailton Brasil (PT) editou valores a serem pagos por quem descumprir as determinações.
     </ion-card-subtitle>
   </ion-card>
 
   <ion-card class="mt-1">
+    <ion-card-content class="mt-1">
+      <ion-list lines="none">
+        <ion-item>
+          <ion-thumbnail>
+            <ion-img src="assets/posts/barbalha.jpg"></ion-img>
+          </ion-thumbnail>
+          <ion-label>
+            <ion-row>
+              <ion-col size="6">
+                <div class="ion-float-left">
+                  <div class="category">
+                    17,9°C
+                  </div>
+                </div>
+              </ion-col>
+              <ion-col size="6">
+                <div class="ion-float-right bookmark-outline">
+                  <ion-icon name="bookmark-outline"></ion-icon>
+                </div>
+              </ion-col>
+            </ion-row>
+            <div class="title-ion-item">Barbalha entre os mais frios do nordeste no mês de abril</div>
+          </ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+
+    <div class="divider"></div>
+
+    <ion-card-content class="mb-1">
+      <ion-list lines="none">
+        <ion-item>
+          <ion-thumbnail>
+            <ion-img src="https://bordalo.observador.pt/400x,q85/https://s3.observador.pt/wp-content/uploads/2020/04/06201918/28586873-1-scaled_770x433_acf_cropped.jpg"></ion-img>
+          </ion-thumbnail>
+          <ion-label>
+            <ion-row>
+              <ion-col size="6">
+                <div class="ion-float-left">
+                  <div class="category">
+                    Covid-19
+                  </div>
+                </div>
+              </ion-col>
+              <ion-col size="6">
+                <div class="ion-float-right bookmark-outline">
+                  <ion-icon name="bookmark-outline"></ion-icon>
+                </div>
+              </ion-col>
+            </ion-row>
+            <div class="title-ion-item">Boris Johnson internado nos cuidados intensivos</div>
+          </ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col size="1"></ion-col>
+      <ion-col>
+        <ion-row>
+          <div class="title-pub">PUBLICIDADE</div>
+          <ion-img src="assets/pub.png"></ion-img>
+        </ion-row>
+      </ion-col>
+      <ion-col size="1"></ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <ion-card class="mt-1">
+    <ion-card-header>
+      <ion-row>
+        <ion-col size="6">
+          <div class="ion-float-left">
+            <ion-badge color="danger">SAÚDE</ion-badge>
+          </div>
+        </ion-col>
+        <ion-col size="6">
+          <div class="ion-float-right bookmark-outline">
+            <ion-icon name="bookmark-outline"></ion-icon>
+          </div>
+        </ion-col>
+      </ion-row>
+      <ion-card-title class="ion-card-title-app"><strong>Em directo/</strong> Situação da banca merece confiança dos portugueses</ion-card-title>
+    </ion-card-header>
+
+    <div class="mt-1 mb-0">
+      <ion-img src="https://bordalo.observador.pt/400x,q85/https://s3.observador.pt/wp-content/uploads/2020/04/06183100/28549144-scaled_770x433_acf_cropped-1.jpg"></ion-img>
+    </div>
+
+    <ion-row>
+      <ion-col size="12">
+        <ion-card-subtitle>
+          Depois de reunir à distância com os 5 maiores bancos, marcelo diz que setor já iniciou os processos para colocar o terreno
+        </ion-card-subtitle>
+      </ion-col>
+    </ion-row>
+
+  </ion-card>
+
+  <ion-card class="mt-1">
+
+    <ion-card-content class="mt-1">
+      <ion-card-header>
+        <ion-row>
+          <ion-col size="6">
+            <div class="ion-float-left">
+              <ion-badge color="danger">Economia</ion-badge>
+            </div>
+          </ion-col>
+          <ion-col size="6">
+            <div class="ion-float-right bookmark-outline">
+              <ion-icon name="bookmark-outline"></ion-icon>
+            </div>
+          </ion-col>
+        </ion-row>
+        <ion-card-title class="ion-card-title-app"><strong>Auxílio Emergencial /</strong> 22 milhões já se cadastraram e 40% não têm conta em banco, diz caixa</ion-card-title>
+        <!--<ion-card-subtitle>Depois de reunir à distância com os 5 maiores bancos, marcelo diz que setor já iniciou os processos para colocar o terreno</ion-card-subtitle>-->
+      </ion-card-header>
+      <ion-card-subtitle class="ion-card-subtitle">
+        Presidente do banco diz que abrirá conta gratuita para grupo reeber o benefício.
+      </ion-card-subtitle>
+
+      <div class="divider"></div>
+
+    </ion-card-content>
+
     <ion-card-content class="mt-1">
       <ion-list lines="none">
         <ion-item>
@@ -88,38 +212,13 @@
   </ion-grid>
 
   <ion-card class="mt-1">
+
+  <ion-card-content class="mt-1">
     <ion-card-header>
       <ion-row>
         <ion-col size="6">
           <div class="ion-float-left">
-            <ion-badge color="danger">SAÚDE</ion-badge>
-          </div>
-        </ion-col>
-        <ion-col size="6">
-          <div class="ion-float-right bookmark-outline">
-            <ion-icon name="bookmark-outline"></ion-icon>
-          </div>
-        </ion-col>
-      </ion-row>
-      <ion-card-title class="ion-card-title-app"><strong>Em directo/</strong> Situação da banca merece confiança dos portugueses</ion-card-title>
-      <!--<ion-card-subtitle>Depois de reunir à distância com os 5 maiores bancos, marcelo diz que setor já iniciou os processos para colocar o terreno</ion-card-subtitle>-->
-    </ion-card-header>
-    <!--<ion-card-subtitle>
-      Depois de reunir à distância com os 5 maiores bancos, marcelo diz que setor já iniciou os processos para colocar o terreno
-    </ion-card-subtitle>-->
-
-    <div class="mt-1 mb-0">
-      <ion-img src="https://bordalo.observador.pt/400x,q85/https://s3.observador.pt/wp-content/uploads/2020/04/06183100/28549144-scaled_770x433_acf_cropped-1.jpg"></ion-img>
-    </div>
-
-  </ion-card>
-
-  <ion-card class="mt-15">
-    <ion-card-header>
-      <ion-row>
-        <ion-col size="6">
-          <div class="ion-float-left">
-            <ion-badge color="danger">Economia</ion-badge>
+            <ion-badge color="danger">Polícia</ion-badge>
           </div>
         </ion-col>
         <ion-col size="6">
@@ -129,11 +228,239 @@
         </ion-col>
       </ion-row>
       <ion-card-title class="ion-card-title-app"><strong>Auxílio Emergencial /</strong> 22 milhões já se cadastraram e 40% não têm conta em banco, diz caixa</ion-card-title>
-      <!--<ion-card-subtitle>Depois de reunir à distância com os 5 maiores bancos, marcelo diz que setor já iniciou os processos para colocar o terreno</ion-card-subtitle>-->
     </ion-card-header>
     <ion-card-subtitle class="ion-card-subtitle">
       Presidente do banco diz que abrirá conta gratuita para grupo reeber o benefício.
     </ion-card-subtitle>
+
+    <div class="divider"></div>
+
+  </ion-card-content>
+
+  <ion-card-content class="mt-1">
+    <ion-list lines="none">
+      <ion-item>
+        <ion-thumbnail>
+          <ion-img src="https://bordalo.observador.pt/100x,q85/https://s3.observador.pt/wp-content/uploads/2020/04/06134237/28574942_433x433_acf_cropped-1.jpg"></ion-img>
+        </ion-thumbnail>
+        <ion-label>
+          <ion-row>
+            <ion-col size="6">
+              <div class="ion-float-left">
+                <div class="category">
+                  Política
+                </div>
+              </div>
+            </ion-col>
+            <ion-col size="6">
+              <div class="ion-float-right bookmark-outline">
+                <ion-icon name="bookmark-outline"></ion-icon>
+              </div>
+            </ion-col>
+          </ion-row>
+          <div class="title-ion-item">Menor subida de casos desde o acelerar da pandemia</div>
+        </ion-label>
+      </ion-item>
+    </ion-list>
+  </ion-card-content>
+
+  <div class="divider"></div>
+
+  <ion-card-content class="mb-1">
+    <ion-list lines="none">
+      <ion-item>
+        <ion-thumbnail>
+          <ion-img src="https://bordalo.observador.pt/400x,q85/https://s3.observador.pt/wp-content/uploads/2020/04/06201918/28586873-1-scaled_770x433_acf_cropped.jpg"></ion-img>
+        </ion-thumbnail>
+        <ion-label>
+          <ion-row>
+            <ion-col size="6">
+              <div class="ion-float-left">
+                <div class="category">
+                  Covid-19
+                </div>
+              </div>
+            </ion-col>
+            <ion-col size="6">
+              <div class="ion-float-right bookmark-outline">
+                <ion-icon name="bookmark-outline"></ion-icon>
+              </div>
+            </ion-col>
+          </ion-row>
+          <div class="title-ion-item">Em direto/ Boris Johnson internado nos cuidados intensivos</div>
+        </ion-label>
+      </ion-item>
+    </ion-list>
+  </ion-card-content>
+
+  <div class="divider"></div>
+
+  <ion-card-content class="mt-1 mb-1">
+    <ion-list lines="none">
+      <ion-item>
+        <ion-thumbnail>
+          <ion-img src="https://bordalo.observador.pt/100x,q85/https://s3.observador.pt/wp-content/uploads/2020/04/06134237/28574942_433x433_acf_cropped-1.jpg"></ion-img>
+        </ion-thumbnail>
+        <ion-label>
+          <ion-row>
+            <ion-col size="6">
+              <div class="ion-float-left">
+                <div class="category">
+                  Política
+                </div>
+              </div>
+            </ion-col>
+            <ion-col size="6">
+              <div class="ion-float-right bookmark-outline">
+                <ion-icon name="bookmark-outline"></ion-icon>
+              </div>
+            </ion-col>
+          </ion-row>
+          <div class="title-ion-item">Menor subida de casos desde o acelerar da pandemia</div>
+        </ion-label>
+      </ion-item>
+    </ion-list>
+  </ion-card-content>
+
+</ion-card>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col size="1"></ion-col>
+      <ion-col>
+        <ion-row>
+          <div class="title-pub">PUBLICIDADE</div>
+          <ion-img src="assets/pub.png"></ion-img>
+        </ion-row>
+      </ion-col>
+      <ion-col size="1"></ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <ion-card class="mt-1">
+
+    <ion-card-content class="mt-1">
+      <ion-card-header>
+        <ion-row>
+          <ion-col size="6">
+            <div class="ion-float-left">
+              <ion-badge color="danger">Política</ion-badge>
+            </div>
+          </ion-col>
+          <ion-col size="6">
+            <div class="ion-float-right bookmark-outline">
+              <ion-icon name="bookmark-outline"></ion-icon>
+            </div>
+          </ion-col>
+        </ion-row>
+        <ion-card-title class="ion-card-title-app"><strong>Auxílio Emergencial /</strong> 22 milhões já se cadastraram e 40% não têm conta em banco, diz caixa</ion-card-title>
+      </ion-card-header>
+      <ion-card-subtitle class="ion-card-subtitle">
+        Presidente do banco diz que abrirá conta gratuita para grupo reeber o benefício.
+      </ion-card-subtitle>
+
+      <div class="divider"></div>
+
+    </ion-card-content>
+
+    <ion-card-content class="mt-1">
+      <ion-list lines="none">
+        <ion-item>
+          <ion-thumbnail>
+            <ion-img src="https://bordalo.observador.pt/100x,q85/https://s3.observador.pt/wp-content/uploads/2020/04/06134237/28574942_433x433_acf_cropped-1.jpg"></ion-img>
+          </ion-thumbnail>
+          <ion-label>
+            <ion-row>
+              <ion-col size="6">
+                <div class="ion-float-left">
+                  <div class="category">
+                    Política
+                  </div>
+                </div>
+              </ion-col>
+              <ion-col size="6">
+                <div class="ion-float-right bookmark-outline">
+                  <ion-icon name="bookmark-outline"></ion-icon>
+                </div>
+              </ion-col>
+            </ion-row>
+            <div class="title-ion-item">Menor subida de casos desde o acelerar da pandemia</div>
+          </ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+
+    <div class="divider"></div>
+
+    <ion-card-content class="mb-1">
+      <ion-list lines="none">
+        <ion-item>
+          <ion-thumbnail>
+            <ion-img src="https://bordalo.observador.pt/400x,q85/https://s3.observador.pt/wp-content/uploads/2020/04/06201918/28586873-1-scaled_770x433_acf_cropped.jpg"></ion-img>
+          </ion-thumbnail>
+          <ion-label>
+            <ion-row>
+              <ion-col size="6">
+                <div class="ion-float-left">
+                  <div class="category">
+                    Covid-19
+                  </div>
+                </div>
+              </ion-col>
+              <ion-col size="6">
+                <div class="ion-float-right bookmark-outline">
+                  <ion-icon name="bookmark-outline"></ion-icon>
+                </div>
+              </ion-col>
+            </ion-row>
+            <div class="title-ion-item">Em direto/ Boris Johnson internado nos cuidados intensivos</div>
+          </ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+
+    <div class="divider"></div>
+
+    <ion-card-content class="mt-1 mb-1">
+      <ion-list lines="none">
+        <ion-item>
+          <ion-thumbnail>
+            <ion-img src="https://bordalo.observador.pt/100x,q85/https://s3.observador.pt/wp-content/uploads/2020/04/06134237/28574942_433x433_acf_cropped-1.jpg"></ion-img>
+          </ion-thumbnail>
+          <ion-label>
+            <ion-row>
+              <ion-col size="6">
+                <div class="ion-float-left">
+                  <div class="category">
+                    Política
+                  </div>
+                </div>
+              </ion-col>
+              <ion-col size="6">
+                <div class="ion-float-right bookmark-outline">
+                  <ion-icon name="bookmark-outline"></ion-icon>
+                </div>
+              </ion-col>
+            </ion-row>
+            <div class="title-ion-item">Menor subida de casos desde o acelerar da pandemia</div>
+          </ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+
   </ion-card>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col size="1"></ion-col>
+      <ion-col>
+        <ion-row>
+          <div class="title-pub">PUBLICIDADE</div>
+          <ion-img src="assets/pub.png"></ion-img>
+        </ion-row>
+      </ion-col>
+      <ion-col size="1"></ion-col>
+    </ion-row>
+  </ion-grid>
 
 </ion-content>
