conteudo home page e colunas

--- a/src/app/single/single.page.scss
+++ b/src/app/single/single.page.scss
@@ -37,6 +37,7 @@ ion-card-subtitle{
   line-height: 1.4;
   font-weight: 200;
   text-transform: capitalize;
+  color: black;
 }
 
 ion-card-content{
@@ -58,5 +59,6 @@ ion-title{
   font-weight: 100;
   padding: 0 20px;
   margin-top: -20px;
+  color: black;
 }
 
