--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -5,7 +5,7 @@
   <ion-card class="mt-0" [routerLink]="['/single']">
     <ion-card-header>
       <ion-badge color="warning">AGLOMERAÇÃO</ion-badge>
-      <ion-card-title><strong>Em Cariri /</strong> Prefeitura multa banco itaú em R$50 mil por descumprir decreto</ion-card-title>
+      <ion-card-title><strong>Em Crato /</strong> Prefeitura multa banco itaú em R$50 mil por descumprir decreto</ion-card-title>
     </ion-card-header>
     <ion-card-subtitle>
       A medida já havia sido prevista no decreto publicado no dia 6, quando o prefeito Zé Ailton Brasil (PT) editou valores a serem pagos por quem descumprir as determinações.
@@ -46,14 +46,14 @@
       <ion-list lines="none">
         <ion-item>
           <ion-thumbnail>
-            <ion-img src="https://bordalo.observador.pt/400x,q85/https://s3.observador.pt/wp-content/uploads/2020/04/06201918/28586873-1-scaled_770x433_acf_cropped.jpg"></ion-img>
+            <ion-img src="https://www.miseria.com.br/wp-content/uploads/2020/04/darlan-lobo-150x150.jpg"></ion-img>
           </ion-thumbnail>
           <ion-label>
             <ion-row>
               <ion-col size="6">
                 <div class="ion-float-left">
                   <div class="category">
-                    Covid-19
+                    PRESIDENTE
                   </div>
                 </div>
               </ion-col>
@@ -63,7 +63,7 @@
                 </div>
               </ion-col>
             </ion-row>
-            <div class="title-ion-item">Boris Johnson internado nos cuidados intensivos</div>
+            <div class="title-ion-item">Darlan Lobo garante pagamento antecipado do 13º dos servidores</div>
           </ion-label>
         </ion-item>
       </ion-list>
@@ -88,7 +88,7 @@
       <ion-row>
         <ion-col size="6">
           <div class="ion-float-left">
-            <ion-badge color="danger">SAÚDE</ion-badge>
+            <ion-badge color="danger">TUTELA</ion-badge>
           </div>
         </ion-col>
         <ion-col size="6">
@@ -97,17 +97,17 @@
           </div>
         </ion-col>
       </ion-row>
-      <ion-card-title class="ion-card-title-app"><strong>Em directo/</strong> Situação da banca merece confiança dos portugueses</ion-card-title>
+      <ion-card-title class="ion-card-title-app"><strong>No Cariri /</strong> MPCE quer reabertura da Delegacia de Aurora e multa o Estado em R$ 50 mil</ion-card-title>
     </ion-card-header>
 
     <div class="mt-1 mb-0">
-      <ion-img src="https://bordalo.observador.pt/400x,q85/https://s3.observador.pt/wp-content/uploads/2020/04/06183100/28549144-scaled_770x433_acf_cropped-1.jpg"></ion-img>
+      <ion-img src="https://www.miseria.com.br/wp-content/uploads/2020/04/policia-civil-660x360.jpg"></ion-img>
     </div>
 
     <ion-row>
       <ion-col size="12">
         <ion-card-subtitle>
-          Depois de reunir à distância com os 5 maiores bancos, marcelo diz que setor já iniciou os processos para colocar o terreno
+          Segundo a promotora de Justiça, os atos normativos questionados na ação violam a Lei Federal nº 13.979/20 e o Decreto Presidencial nº 10.282/20
         </ion-card-subtitle>
       </ion-col>
     </ion-row>
@@ -131,7 +131,6 @@
           </ion-col>
         </ion-row>
         <ion-card-title class="ion-card-title-app"><strong>Auxílio Emergencial /</strong> 22 milhões já se cadastraram e 40% não têm conta em banco, diz caixa</ion-card-title>
-        <!--<ion-card-subtitle>Depois de reunir à distância com os 5 maiores bancos, marcelo diz que setor já iniciou os processos para colocar o terreno</ion-card-subtitle>-->
       </ion-card-header>
       <ion-card-subtitle class="ion-card-subtitle">
         Presidente do banco diz que abrirá conta gratuita para grupo reeber o benefício.
@@ -152,7 +151,7 @@
               <ion-col size="6">
                 <div class="ion-float-left">
                   <div class="category">
-                    Política
+                    Pandemia
                   </div>
                 </div>
               </ion-col>
@@ -218,7 +217,7 @@
       <ion-row>
         <ion-col size="6">
           <div class="ion-float-left">
-            <ion-badge color="danger">Polícia</ion-badge>
+            <ion-badge color="danger">Roubos</ion-badge>
           </div>
         </ion-col>
         <ion-col size="6">
@@ -227,10 +226,10 @@
           </div>
         </ion-col>
       </ion-row>
-      <ion-card-title class="ion-card-title-app"><strong>Auxílio Emergencial /</strong> 22 milhões já se cadastraram e 40% não têm conta em banco, diz caixa</ion-card-title>
+      <ion-card-title class="ion-card-title-app"><strong>Em Polícia /</strong> Mais duas motos roubadas em Juazeiro do Norte nas últimas horas</ion-card-title>
     </ion-card-header>
     <ion-card-subtitle class="ion-card-subtitle">
-      Presidente do banco diz que abrirá conta gratuita para grupo reeber o benefício.
+      Os veículos foram tomados em assaltos por homens armados
     </ion-card-subtitle>
 
     <div class="divider"></div>
@@ -241,14 +240,14 @@
     <ion-list lines="none">
       <ion-item>
         <ion-thumbnail>
-          <ion-img src="https://bordalo.observador.pt/100x,q85/https://s3.observador.pt/wp-content/uploads/2020/04/06134237/28574942_433x433_acf_cropped-1.jpg"></ion-img>
+          <ion-img src="https://www.miseria.com.br/wp-content/uploads/2020/04/006-13-150x150.jpg"></ion-img>
         </ion-thumbnail>
         <ion-label>
           <ion-row>
             <ion-col size="6">
               <div class="ion-float-left">
                 <div class="category">
-                  Política
+                  Homicídios
                 </div>
               </div>
             </ion-col>
@@ -258,7 +257,7 @@
               </div>
             </ion-col>
           </ion-row>
-          <div class="title-ion-item">Menor subida de casos desde o acelerar da pandemia</div>
+          <div class="title-ion-item">Homem é morto a tiros em Granjeiro quando dormia em rede no alpendre</div>
         </ion-label>
       </ion-item>
     </ion-list>
@@ -270,14 +269,14 @@
     <ion-list lines="none">
       <ion-item>
         <ion-thumbnail>
-          <ion-img src="https://bordalo.observador.pt/400x,q85/https://s3.observador.pt/wp-content/uploads/2020/04/06201918/28586873-1-scaled_770x433_acf_cropped.jpg"></ion-img>
+          <ion-img src="https://www.miseria.com.br/wp-content/uploads/2020/04/017-9-150x150.jpg"></ion-img>
         </ion-thumbnail>
         <ion-label>
           <ion-row>
             <ion-col size="6">
               <div class="ion-float-left">
                 <div class="category">
-                  Covid-19
+                  Fuminho
                 </div>
               </div>
             </ion-col>
@@ -287,7 +286,7 @@
               </div>
             </ion-col>
           </ion-row>
-          <div class="title-ion-item">Em direto/ Boris Johnson internado nos cuidados intensivos</div>
+          <div class="title-ion-item">PF sugere que Justiça do Ceará peça extradição de traficante</div>
         </ion-label>
       </ion-item>
     </ion-list>
@@ -299,14 +298,14 @@
     <ion-list lines="none">
       <ion-item>
         <ion-thumbnail>
-          <ion-img src="https://bordalo.observador.pt/100x,q85/https://s3.observador.pt/wp-content/uploads/2020/04/06134237/28574942_433x433_acf_cropped-1.jpg"></ion-img>
+          <ion-img src="https://www.miseria.com.br/wp-content/uploads/2020/04/009-12-150x150.jpg"></ion-img>
         </ion-thumbnail>
         <ion-label>
           <ion-row>
             <ion-col size="6">
               <div class="ion-float-left">
                 <div class="category">
-                  Política
+                  Crime
                 </div>
               </div>
             </ion-col>
@@ -316,7 +315,7 @@
               </div>
             </ion-col>
           </ion-row>
-          <div class="title-ion-item">Menor subida de casos desde o acelerar da pandemia</div>
+          <div class="title-ion-item">Homem foi morto a tiros dentro de casa em Lavras da Mangabeira</div>
         </ion-label>
       </ion-item>
     </ion-list>
@@ -353,10 +352,10 @@
             </div>
           </ion-col>
         </ion-row>
-        <ion-card-title class="ion-card-title-app"><strong>Auxílio Emergencial /</strong> 22 milhões já se cadastraram e 40% não têm conta em banco, diz caixa</ion-card-title>
+        <ion-card-title class="ion-card-title-app"><strong>Presidência /</strong> tem 30 dias para apresentar resultado de exame da covid-19 à Câmara</ion-card-title>
       </ion-card-header>
       <ion-card-subtitle class="ion-card-subtitle">
-        Presidente do banco diz que abrirá conta gratuita para grupo reeber o benefício.
+        Bolsonaro viajou para os Estados Unidos com uma comitiva formada por ministros e parlamentares, dos quais pelo menos 25 tiveram diagnóstico de covid-19 após a viagem
       </ion-card-subtitle>
 
       <div class="divider"></div>
@@ -367,14 +366,14 @@
       <ion-list lines="none">
         <ion-item>
           <ion-thumbnail>
-            <ion-img src="https://bordalo.observador.pt/100x,q85/https://s3.observador.pt/wp-content/uploads/2020/04/06134237/28574942_433x433_acf_cropped-1.jpg"></ion-img>
+            <ion-img src="https://www.miseria.com.br/wp-content/uploads/2020/04/025-3-150x150.jpg"></ion-img>
           </ion-thumbnail>
           <ion-label>
             <ion-row>
               <ion-col size="6">
                 <div class="ion-float-left">
                   <div class="category">
-                    Política
+                    Fontes
                   </div>
                 </div>
               </ion-col>
@@ -384,7 +383,7 @@
                 </div>
               </ion-col>
             </ion-row>
-            <div class="title-ion-item">Menor subida de casos desde o acelerar da pandemia</div>
+            <div class="title-ion-item">Mandetta avisa equipe que deve ser demitido nesta semana</div>
           </ion-label>
         </ion-item>
       </ion-list>
@@ -396,14 +395,14 @@
       <ion-list lines="none">
         <ion-item>
           <ion-thumbnail>
-            <ion-img src="https://bordalo.observador.pt/400x,q85/https://s3.observador.pt/wp-content/uploads/2020/04/06201918/28586873-1-scaled_770x433_acf_cropped.jpg"></ion-img>
+            <ion-img src="https://www.miseria.com.br/wp-content/uploads/2020/04/006-12-150x150.jpg"></ion-img>
           </ion-thumbnail>
           <ion-label>
             <ion-row>
               <ion-col size="6">
                 <div class="ion-float-left">
                   <div class="category">
-                    Covid-19
+                    Senador
                   </div>
                 </div>
               </ion-col>
@@ -413,7 +412,7 @@
                 </div>
               </ion-col>
             </ion-row>
-            <div class="title-ion-item">Em direto/ Boris Johnson internado nos cuidados intensivos</div>
+            <div class="title-ion-item">Postura de Bolsonaro leva insegurança à população, diz Tasso</div>
           </ion-label>
         </ion-item>
       </ion-list>
@@ -425,14 +424,14 @@
       <ion-list lines="none">
         <ion-item>
           <ion-thumbnail>
-            <ion-img src="https://bordalo.observador.pt/100x,q85/https://s3.observador.pt/wp-content/uploads/2020/04/06134237/28574942_433x433_acf_cropped-1.jpg"></ion-img>
+            <ion-img src="https://www.miseria.com.br/wp-content/uploads/2020/04/022-9-150x150.jpg"></ion-img>
           </ion-thumbnail>
           <ion-label>
             <ion-row>
               <ion-col size="6">
                 <div class="ion-float-left">
                   <div class="category">
-                    Política
+                    Governador
                   </div>
                 </div>
               </ion-col>
@@ -442,7 +441,7 @@
                 </div>
               </ion-col>
             </ion-row>
-            <div class="title-ion-item">Menor subida de casos desde o acelerar da pandemia</div>
+            <div class="title-ion-item">Governador do Rio de Janeiro testa positivo para Covid-19</div>
           </ion-label>
         </ion-item>
       </ion-list>
