--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -4,26 +4,91 @@
       Colunas/Blogs
     </ion-list-header>
 
-    <ion-item>
+    <ion-item lines="none">
       <ion-avatar slot="start">
         <img src="https://www.miseria.com.br/wp-content/themes/miseria/assets/img/collumns/felipe-azevedo.jpg" alt="Felipe Azevedo">
       </ion-avatar>
       <ion-label>
-        <h2>Felipe Azevedo</h2>
-        <h3>Política</h3>
-        <p>Em meio ao coronavírus, prefeitos do Cariri se preparam para alta de casos de dengue</p>
+        <div class="title-avatar"><strong>Felipe Azevedo</strong> | Política</div>
+        <p class="title-column">Em meio ao coronavírus, prefeitos do Cariri se preparam para alta de casos de dengue</p>
       </ion-label>
     </ion-item>
 
-    <ion-item>
+    <div class="divider mt-1 mb-1"></div>
+
+    <ion-item lines="none">
       <ion-avatar slot="start">
         <img src="https://www.miseria.com.br/wp-content/themes/miseria/assets/img/collumns/madson.jpg" alt="Madson Vagner">
       </ion-avatar>
       <ion-label>
-        <h2>Madson Vagner</h2>
-        <h3>e-Política</h3>
-        <p>Em Assaré, disputa interna ameaça unidade da oposição</p>
+        <div class="title-avatar"><strong>Madson Vagner</strong> | e-Política</div>
+        <p class="title-column">Em Assaré, disputa interna ameaça unidade da oposição</p>
       </ion-label>
     </ion-item>
+
+    <div class="divider mt-1 mb-1"></div>
+
+    <ion-item lines="none">
+      <ion-avatar slot="start">
+        <img src="https://www.miseria.com.br/wp-content/themes/miseria/assets/img/collumns/alan.jpg" alt="Alan Rodrigues">
+      </ion-avatar>
+      <ion-label>
+        <div class="title-avatar"><strong>Alan Rodrigues</strong> | Tecnologia</div>
+        <p class="title-column">Inbound Marketing x Conteúdos indesejados</p>
+      </ion-label>
+    </ion-item>
+
+    <div class="divider mt-1 mb-1"></div>
+
+    <ion-grid>
+      <ion-row>
+        <ion-col size="1"></ion-col>
+        <ion-col>
+          <ion-row>
+            <div class="title-pub">PUBLICIDADE</div>
+            <ion-img src="assets/pub.png"></ion-img>
+          </ion-row>
+        </ion-col>
+        <ion-col size="1"></ion-col>
+      </ion-row>
+    </ion-grid>
+
+    <div class="divider mt-1 mb-1"></div>
+
+    <ion-item lines="none">
+      <ion-avatar slot="start">
+        <img src="https://www.miseria.com.br/wp-content/themes/miseria/assets/img/collumns/izabely.jpeg" alt="Izabely Macêdo">
+      </ion-avatar>
+      <ion-label>
+        <div class="title-avatar"><strong>Izabely Macêdo</strong> | Mulher</div>
+        <p class="title-column">Qual a relação entre o HIV, o Mito e o Coronavírus?</p>
+      </ion-label>
+    </ion-item>
+
+    <div class="divider mt-1 mb-1"></div>
+
+    <ion-item lines="none">
+      <ion-avatar slot="start">
+        <img src="https://www.miseria.com.br/wp-content/themes/miseria/assets/img/collumns/joao.jpg" alt="João Boaventura">
+      </ion-avatar>
+      <ion-label>
+        <div class="title-avatar"><strong>João Boaventura</strong> | Cidades</div>
+        <p class="title-column">Fecomércio apresenta exposição fotográfica contemporânea destacando o Cariri cearense</p>
+      </ion-label>
+    </ion-item>
+
+    <div class="divider mt-1 mb-1"></div>
+
+    <ion-item lines="none">
+      <ion-avatar slot="start">
+        <img src="https://www.miseria.com.br/wp-content/themes/miseria/assets/img/collumns/dr-thiago.png" alt="Dr. Thiago Macedo">
+      </ion-avatar>
+      <ion-label>
+        <div class="title-avatar"><strong>Dr. Thiago Macedo</strong> | Saúde Mental</div>
+        <p class="title-column">A pandemia deixa rastro de transtornos mentais</p>
+      </ion-label>
+    </ion-item>
+
   </ion-list>
+
 </ion-content>
